--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
  </head>
  <body>
     <header>
-      <div class="w3-bar w3-black">
+      <div class="w3-bar w3-blue">
         <a href="https://www.linkedin.com/in/christopher-shehu/" target="_blank" class="w3-bar-item w3-button w3-mobile">Linkedin</a>
         <a href="https://medium.com/@chris_52785" target="_blank" class="w3-bar-item w3-button w3-mobile">Medium</a>
         <a href="https://github.com/chris2shehu" target="_blank" class="w3-bar-item w3-button w3-mobile">GitHub</a>
@@ -45,7 +45,7 @@
     </header>
     
 
-    <img src="static/img/PJ_glacier.JPG" alt="Avatar" style="width:200px">
+    <img src="https://media-exp1.licdn.com/dms/image/C4D03AQEOHT9vzZIWOg/profile-displayphoto-shrink_800_800/0/1516940361782?e=1658361600&v=beta&t=pPDt3kr5Vk9gUnt4VHZJxuT_rtITLkgP8I8Ukmke1T8" alt="Profile Picture" style="width:200px">
 
     <p class="home_body"> I’m a BI Developer with many years of experience in the tech industry. I’ve worked in various capacities and roles such as Reporting Analyst, Ambulatory Analyst, Tech Support Agent, Computer Operator Forensics intern, and 3d designer. I have experience with ETL process, Data Lakes, Machine Learning Models, building API’s, using API’s, SQL, and Python. I love to utilize new technologies to come up with creative and competitive solutions for my end users. When I’m not busy traversing the world of data I like to spend my time studying or relaxing with the family. </p>
 
