--- a/index.html
+++ b/index.html
@@ -45,11 +45,11 @@
     </header>
     
 
-    <img src="https://media-exp1.licdn.com/dms/image/C4D03AQEOHT9vzZIWOg/profile-displayphoto-shrink_800_800/0/1516940361782?e=1658361600&v=beta&t=pPDt3kr5Vk9gUnt4VHZJxuT_rtITLkgP8I8Ukmke1T8" alt="Profile Picture" style="width:200px">
+    <img src="https://github.com/chris2shehu/chris2shehu.github.io/raw/UpdatingContent/images/SmallProfile.jpg" alt="Profile Picture" style="width:200px">
 
-    <p class="home_body"> I’m a BI Developer with many years of experience in the Tech industry. I’ve worked in various capacities and roles such as Reporting Analyst, Ambulatory Analyst, Tech Support Agent, Computer Operator, Forensics intern, and 3d Designer. I have experience with ETL process, Data Lakes, Machine Learning Models, building API’s, using API’s, SQL, and Python. I love to utilize new technologies to come up with creative and competitive solutions for my customers. My goal is to make things easy and effortless for the customers I work with! When I’m not busy traversing the world of data I like to spend my time studying or relaxing with the family.</p>
+    <p class="home_body"> I’m a Data Engineer with many years of experience in the Tech industry. I’ve worked in various capacities and roles such as Reporting Analyst, Ambulatory Analyst, Tech Support Agent, Computer Operator, Forensics intern, and 3d Designer. I have experience with ETL processes, Data Lakes, Machine Learning Models, building API’s, using API’s, SQL, and Python. I love to utilize new technologies to come up with creative and competitive solutions for my customers. My goal is to make things easy and effortless for the customers I work with! When I’m not busy traversing the world of data I like to spend my time studying or relaxing with the family.</p>
 
-    <p class="home_body">My <b>tech stack</b> includes: Azure, Azure Data Factory, Azure Data Lakes, Azure Databricks, Azure Functions, Python(Pandas, Spark)</p>
+    <p class="home_body">My <b>tech stack</b> includes: Azure, Azure Data Factory, Azure Data Lakes, Azure Databricks, Delta Lake, Azure Functions, Python(Pandas, Spark)</p>
     
     <p class="home_body">You can reach me at: <a href="mailto:chris@cshehu.com">chris@cshehu.com</a></p>
 
