--- a/index.html
+++ b/index.html
@@ -47,8 +47,24 @@
 
     <img src="https://github.com/chris2shehu/chris2shehu.github.io/raw/UpdatingContent/images/SmallProfile.jpg" alt="Profile Picture" style="width:200px">
 
-    <p class="home_body"> I’m a Data Engineer with many years of experience in the Tech industry. I’ve worked in various capacities and roles such as Reporting Analyst, Ambulatory Analyst, Tech Support Agent, Computer Operator, Forensics intern, and 3d Designer. I have experience with ETL processes, Data Lakes, Machine Learning Models, building API’s, using API’s, SQL, and Python. I love to utilize new technologies to come up with creative and competitive solutions for my customers. My goal is to make things easy and effortless for the customers I work with! When I’m not busy traversing the world of data I like to spend my time studying or relaxing with the family.</p>
+    <p class="home_body">In the dynamic world of the tech industry, one name stands out among data engineers: Christopher Shehu. With a rich tapestry of experience that spans various capacities and roles, this data engineer has navigated diverse terrains, from the intricate pathways of Reporting Analysis to the multifaceted world of Ambulatory Analysis.
 
+Starting off as a Tech Support Agent, Christopher honed their problem-solving skills and developed a deep understanding of the user experience. They then expanded their expertise to include the role of Computer Operator, where they fine-tuned their ability to manage and monitor computer hardware systems.
+
+But Christopher's thirst for knowledge didn't stop there. They ventured into the realm of Forensics as an intern, deepening their understanding of data and its myriad applications. Their creative flair shone through in their role as a 3D Designer, where they harnessed technology to transform ideas into tangible designs.
+
+As a Data Engineer, Christopher has shown mastery in handling ETL processes, building and using APIs, and working with Data Lakes and Machine Learning Models. They're proficient in SQL and Python, and they continuously seek out new technologies to create innovative and competitive solutions for customers.
+
+Their tech stack is an impressive toolbox that includes Azure Data Factory, Azure Data Lakes, Azure Databricks, Delta Lake, Azure Functions, and Python (Pandas, Spark). With these tools, Christopher is equipped to tackle any data-related challenge.
+
+When Christopher is not immersed in the world of data, they enjoy studying and spending quality time with their family. Their dedication to personal growth and family mirrors their commitment to making things easy and effortless for the customers they work with.
+
+As you embark on your next data project, consider the value of having a seasoned guide like Christopher by your side. With their diverse experience and innovative mindset, they could be the perfect navigator to lead you through the complex landscape of data.</p>
+
+   
+   
+   
+   
     <p class="home_body">My <b>tech stack</b> includes: Azure, Azure Data Factory, Azure Data Lakes, Azure Databricks, Delta Lake, Azure Functions, Python(Pandas, Spark)</p>
     
     <p class="home_body">You can reach me at: <a href="mailto:chris@cshehu.com">chris@cshehu.com</a></p>
