--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     </header>
     
 
-    <img src="https://github.com/chris2shehu/chris2shehu.github.io/raw/UpdatingContent/images/Brain Bulb Lamp Smart Idea Logo Template (1).gif" alt="Profile Picture" style="width:200px">
+    <img src="https://github.com/chris2shehu/chris2shehu.github.io/raw/UpdatingContent/images/BrainLogo.gif" alt="Profile Picture" style="width:200px">
 
     <p class="home_body">I am a Data Engineer with a wealth of experience in the tech industry. My career has spanned a diverse range of roles including Reporting Analyst, Ambulatory Analyst, Tech Support Agent, Computer Operator, Forensics Intern, and 3D Designer. This breadth of experience has provided me with a unique perspective on the industry and the ability to approach problems from multiple angles.
 
