--- a/index.html
+++ b/index.html
@@ -268,7 +268,7 @@
 			<div class="row justify-content-center">
 				<div class="col-md-12 heading-section text-center ftco-animate mb-5">
 					<span class="subheading">Unleashing the Power of Data</span>
-					<h2 class="mb-4">Specialized Services Talored to Your Needs</h2>
+					<h2 class="mb-4">Specialized Services Tailored  to Your Needs</h2>
 					<p>Discover a range of expertly delivered services, designed to harness the power of your data and drive your business forward.</p>
 				</div>
 			</div>
@@ -287,7 +287,7 @@
 					<div class="media block-6 services d-block bg-white rounded-lg shadow ftco-animate">
 						<div class="icon shadow d-flex align-items-center justify-content-center"><span class="flaticon-app-development"></span></div>
 						<div class="media-body">
-							<h3 class="heading mb-3">Data Processing Pipeines</h3>
+							<h3 class="heading mb-3">Data Processing Pipelines</h3>
 							<p>Transform, consolidate, and prepare your data for insightful analysis with our expertly designed processing pipelines.</p>
 						</div>
 					</div> 
@@ -296,7 +296,7 @@
 					<div class="media block-6 services d-block bg-white rounded-lg shadow ftco-animate">
 						<div class="icon shadow d-flex align-items-center justify-content-center"><span class="flaticon-web-programming"></span></div>
 						<div class="media-body">
-							<h3 class="heading mb-3">Data Warehouseing</h3>
+							<h3 class="heading mb-3">Data Warehousing</h3>
 							<p>Experience the power of cloud-based data warehousing for efficient handling and deeply insightful data analysis.</p>
 						</div>
 					</div> 
@@ -434,7 +434,7 @@
 						<div class="text text-center p-4">
 							<h3><a href="#">Data Engineering Wiki</a></h3>
 							<span>Data Engineering, Training, Education</span>
-							<p>Ongoing - Contributer</p>
+							<p>Ongoing - Contributor</p>
 						</div>
 					</div>
 				</div>
@@ -454,7 +454,7 @@
 						<div class="text text-center p-4">
 							<h3><a href="#">Medical Diagnosis Bot</a></h3>
 							<span>Python, Medical Workflow, Asessments</span>
-							<p>Complate, Private</p>
+							<p>Complete, Private</p>
 						</div>
 					</div>
 				</div>
@@ -468,7 +468,7 @@
 				<div class="col-md-12 heading-section heading-section-white text-center ftco-animate">
 					<span class="subheading">Client Testimonials</span>
 					<h2 class="mb-4">What My Clients Say,</h2>
-					<p>Read the experiences and successs stores shared by my valued clients.</p>
+					<p>Read the experiences and success stores shared by my valued clients.</p>
 					<p>I take pride in collecting authentic and genuine feedback from my clients. Each testimonial featured here reflects the real experiences and outcomes my clients have achieved through my services. I am committed to delivering exceptional results and building long-lasting partnerships with my clients. Names have been altered to protect client identities.</p>
 				</div>
 			</div>
@@ -590,7 +590,7 @@
 										<div class="user-img" style="background-image: url(images/person_3.jpg)"></div>
 										<div class="pl-3">
 											<p class="name">John Doe</p>
-											<span class="position">Sr. Business Inteligence Analysts</span>
+											<span class="position">Sr. Business Intelligence Analysts</span>
 										</div>
 									</div>
 								</div>
