--- a/index.html
+++ b/index.html
@@ -468,7 +468,7 @@
 					<span class="subheading">Client Testimonials</span>
 					<h2 class="mb-4">What My Clients Say,</h2>
 					<p>Read the experiences and success stores shared by my valued clients.</p>
-					<p>I take pride in collecting authentic and genuine feedback from my clients. Each testimonial featured here reflects the real experiences and outcomes my clients have achieved through my services. I am committed to delivering exceptional results and building long-lasting partnerships with my clients. Names have been altered to protect client identities.</p>
+					<p>I take pride in collecting authentic and genuine feedback from my clients. Each testimonial featured here reflects the real experiences and outcomes my clients have achieved through my services. I am committed to delivering exceptional results and building long-lasting partnerships with my clients.</p>
 				</div>
 			</div>
 			<div class="row ftco-animate">
@@ -482,7 +482,6 @@
 									<div class="d-flex align-items-center">
 										<div class="user-img" style="background-image: url(images/person_1.jpg)"></div>
 										<div class="pl-3">
-											<p class="name">John Doe</p>
 											<span class="position">Sr. Business Analysts</span>
 										</div>
 									</div>
@@ -497,7 +496,6 @@
 									<div class="d-flex align-items-center">
 										<div class="user-img" style="background-image: url(images/person_2.jpg)"></div>
 										<div class="pl-3">
-											<p class="name">Jane Doe</p>
 											<span class="position">EVP</span>
 										</div>
 									</div>
@@ -512,7 +510,6 @@
 									<div class="d-flex align-items-center">
 										<div class="user-img" style="background-image: url(images/person_2.jpg)"></div>
 										<div class="pl-3">
-											<p class="name">John Doe</p>
 											<span class="position">Marketing</span>
 										</div>
 									</div>
@@ -527,7 +524,6 @@
 									<div class="d-flex align-items-center">
 										<div class="user-img" style="background-image: url(images/person_2.jpg)"></div>
 										<div class="pl-3">
-											<p class="name">Jane Doe</p>
 											<span class="position">Senior Application Analysts</span>
 										</div>
 									</div>
@@ -543,7 +539,6 @@
 									<div class="d-flex align-items-center">
 										<div class="user-img" style="background-image: url(images/person_2.jpg)"></div>
 										<div class="pl-3">
-											<p class="name">John Doe</p>
 											<span class="position">Director</span>
 										</div>
 									</div>
@@ -558,7 +553,6 @@
 									<div class="d-flex align-items-center">
 										<div class="user-img" style="background-image: url(images/person_2.jpg)"></div>
 										<div class="pl-3">
-											<p class="name">Jane Doe</p>
 											<span class="position">Manager</span>
 										</div>
 									</div>
@@ -573,7 +567,6 @@
 									<div class="d-flex align-items-center">
 										<div class="user-img" style="background-image: url(images/person_2.jpg)"></div>
 										<div class="pl-3">
-											<p class="name">Jane Doe</p>
 											<span class="position">Sr. Business Analysts</span>
 										</div>
 									</div>
@@ -588,7 +581,6 @@
 									<div class="d-flex align-items-center">
 										<div class="user-img" style="background-image: url(images/person_3.jpg)"></div>
 										<div class="pl-3">
-											<p class="name">John Doe</p>
 											<span class="position">Sr. Business Intelligence Analysts</span>
 										</div>
 									</div>
@@ -603,7 +595,6 @@
 									<div class="d-flex align-items-center">
 										<div class="user-img" style="background-image: url(images/person_1.jpg)"></div>
 										<div class="pl-3">
-											<p class="name">Jane Doe</p>
 											<span class="position">Lead Application Analyst</span>
 										</div>
 									</div>
@@ -618,7 +609,6 @@
 									<div class="d-flex align-items-center">
 										<div class="user-img" style="background-image: url(images/person_2.jpg)"></div>
 										<div class="pl-3">
-											<p class="name">John Doe</p>
 											<span class="position">Sr. Application Analyst</span>
 										</div>
 									</div>
